<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="24dp"
        android:text="@string/spiel_starten"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTitle"
        tools:visibility="visible" />

    <Button
        android:id="@+id/settings"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="30dp"
        android:text="@string/einstellungen"
        app:layout_constraintBottom_toTopOf="@+id/credits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="126dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credits"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <Button
        android:id="@+id/credits"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="67dp"
        android:text="@string/credits"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <TextView
        android:id="@+id/gameHeadline"
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:layout_marginTop="83dp"
        android:layout_marginBottom="12dp"
        android:text="@string/willkommen_zu"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/gameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="40dp"
        android:text="@string/snake_4_i_u"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameHeadline" />
</androidx.constraintlayout.widget.ConstraintLayout>